# aichallenge2023-racing

docker/aichallenge/: copy_result.sh  hoge  run_autoware.sh  run_awsim.sh
docker/aichallenge/aichallenge_ws/: hoge
docker/aichallenge/aichallenge_ws/logs/: monitor.csv
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/aichallenge_submit_launch/launch/: autoware_micro_awsim.launch.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/sample_packages/behavior_path_planner_custom/: CMakeLists.txt
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/sample_packages/corner_path_planner_custom/: CMakeLists.txt  package.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/sample_packages/corner_path_planner_custom/include/corner_path_planner/: corner_path_planner_node.hpp  csv_loader.hpp
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/sample_packages/corner_path_planner_custom/src/: corner_path_planner_node.cpp  csv_loader.cpp
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/sample_packages/mpc_lateral_controller_custom/: CMakeLists.txt  package.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/sample_packages/raw_vehicle_cmd_converter_custom/: CMakeLists.txt  (+1 more)
docker/aichallenge/scripts/: check_centerline.py  modify_centerline.py  monitor_plot.py  param_fitting.py  param_load.sh  process_kill.py  rosbag_plot.py  veiw_osm.py
docker/aichallenge/scripts/trial_script/: calc_opt_gx.py  hello_casadi.py  modify_raceline_zero_start4.csv  output.csv
docker/train/: run_container.sh  run_container_cpu.sh
(+33 files in other folders)
